# deepai

./: .gitmodules  CMakeLists.txt  deep.sublime-workspace  run-cmake.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/1stattempt/: 1stattempt.sublime-workspace  CMakeLists.txt  README.TXT  main.cpp  readcvs.cpp  readcvs.h
src/apps/unittester/: CMakeLists.txt  aidatatypes_test.cpp  datamodel_test.cpp  errorcalc_test.cpp  greedytrainer_test.cpp  main.cpp
src/libs/: CMakeLists.txt
src/libs/aialgorithms/: CMakeLists.txt  aialgorithms.cpp  aialgorithms.h  greedytrainer.h  kmeans.h
src/libs/aicore/: CMakeLists.txt  aicore.cpp  aicore.h  basetypes.h  datamodel.cpp  datamodel.h  errorcalc.h  featurespace.h  featurevector.h  intervaldata.h  nominaldata.h  ordinaldata.h  ratiodata.h
src/libs/core/: CMakeLists.txt  buildconfig.h.in  core.cpp  core.h  random.h  vectoralu.h  vectoralu_basicc.h
